Add states for logs
